--- a/DeviceChangeFix/DeviceChangeFix.csproj
+++ b/DeviceChangeFix/DeviceChangeFix.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Dalamud.NET.Sdk/11.0.0">
-    <Import Project="Dalamud.Plugin.Bootstrap.targets"/>
+    <Import Project="Dalamud.Plugin.Bootstrap.targets" />
 
     <PropertyGroup>
         <Authors>nopjmp, Jessidhia, PGGB</Authors>
@@ -19,6 +19,10 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="SharpDX.DirectInput" Version="4.2.0"/>
+        <PackageReference Include="SharpDX.DirectInput" Version="4.2.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.25" />
     </ItemGroup>
 </Project>
